kustomizations/streaming/bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  labels:
    app: bazarr
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: streaming-stack
    app.kubernetes.io/part-of: streaming-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
      app.kubernetes.io/name: bazarr
      app.kubernetes.io/instance: streaming-stack
  template:
    metadata:
      labels:
        app: bazarr
        app.kubernetes.io/name: bazarr
        app.kubernetes.io/instance: streaming-stack
        app.kubernetes.io/part-of: streaming-stack
    spec:
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:latest
        ports:
        - containerPort: 6767
        resources:
          requests:
            memory: 64Mi
            cpu: 5m
        securityContext:
          runAsUser: 0
          runAsGroup: 0
          allowPrivilegeEscalation: true
          capabilities:
            drop: [ "ALL" ]
            add: [ "CHOWN", "SETGID", "SETUID" ]
        livenessProbe:
          httpGet:
            path: /
            port: 6767
          initialDelaySeconds: 20
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /
            port: 6767
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: movies
          mountPath: /movies
        - name: series
          mountPath: /tv
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      volumes:
      - name: config
        hostPath:
          path: /mnt/bazarr
          type: DirectoryOrCreate
      - name: downloads
        hostPath:
          path: /mnt/multimedia/downloads
          type: Directory
      - name: movies
        hostPath:
          path: /mnt/multimedia/movies
          type: Directory
      - name: series
        hostPath:
          path: /mnt/multimedia/series
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  labels:
    app: bazarr
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: streaming-stack
    app.kubernetes.io/part-of: streaming-stack
spec:
  selector:
    app: bazarr
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: streaming-stack
  ports:
  - name: http
    port: 6767
    targetPort: 6767
    nodePort: 30677
  type: NodePort
