kustomizations/streaming/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app: radarr
        app.kubernetes.io/name: radarr
        app.kubernetes.io/part-of: ming-stack
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr:latest
        ports:
        - containerPort: 7878
        resources:
          requests:
            memory: 64Mi
            cpu: 5m
        # securityContext:
        #   runAsUser: 0
        #   runAsGroup: 0
        #   allowPrivilegeEscalation: true
        #   capabilities:
        #     drop: [ "ALL" ]
        #     add: [ "CHOWN", "SETGID", "SETUID" ]
        livenessProbe:
          tcpSocket:
            port: 7878
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          tcpSocket:
            port: 7878
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /movies
        - name: downloads
          mountPath: /downloads
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      volumes:
      - name: config
        hostPath:
          path: /mnt/radarr
          type: DirectoryOrCreate
      - name: movies
        persistentVolumeClaim:
          claimName: movies-pvc
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
  - name: http
    port: 7878
    targetPort: 7878
